# health-app

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: claude.rs  commands.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  server.rs  services.rs
src/lib/: api.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/feelings/: +page.svelte
src/routes/meditation/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/tips/: +page.svelte
src/routes/weight/: +page.svelte
